# oop_6laba

./: CMakeLists.txt  README.md
include/: dragon.h  fight_visitor.h  knight_errant.h  npc.h  npc_factory.h  observer.h  queen.h
src/: dragon.cpp  fight_visitor.cpp  knight_errant.cpp  main.cpp  npc.cpp  npc_factory.cpp  queen.cpp
tests/: test_factory.cpp  test_npc.cpp  test_visitor.cpp
